--- a/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
@@ -102,7 +102,7 @@ $lg-banner-title-font-size: 46px;
   background-color: transparent;
 
   polygon {
-    fill: rgba($brand-primary, .85);
+    fill: rgba($banner-logo-background-color, .85);
   }
 }
 .banner__logo__image {
