--- a/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
@@ -120,7 +120,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
 }
 
 .layout__footer-bottom-outer {
-  border-top: 1px solid #00ace4;
+  border-top: 1px solid lighten($brand-primary, 10%);
 
   p {
     margin: 0;
