--- a/docroot/themes/custom/site/src/styles/theme/entity/node/full/_long-course.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/full/_long-course.scss
@@ -30,7 +30,8 @@
     border: 1px solid #ddd;
     background: none;
     text-align: center;
-    padding: 0; 
+    padding: 0;
+    margin-right: -1px;
     .table-cell {
       padding: 32px 10px;
     }
