--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_contact-person.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_contact-person.scss
@@ -28,6 +28,7 @@
     font-weight: $font-weight;
     line-height: $line-height-base;
     letter-spacing: initial;
+    color: $text-color !important;
   }
 
   table {
