--- a/docroot/modules/custom/vies_application/templates/vies-application-personal-data.html.twig
+++ b/docroot/modules/custom/vies_application/templates/vies-application-personal-data.html.twig
@@ -6,6 +6,7 @@
 </div>
 
 <div class="col-md-6">
+  {{ form['right']['land'] }}
   {{ form['right']['address'] }}
 
   <div class="row">
@@ -20,5 +21,5 @@
     </div>
   </div>
 
-  {{ form['right']|without('address','houseNumber','houseLetter', 'houseFloor') }}
+  {{ form['right']|without('land','address','houseNumber','houseLetter', 'houseFloor') }}
 </div>
