--- a/docroot/modules/custom/vies_application/templates/vies-application-questions.html.twig
+++ b/docroot/modules/custom/vies_application/templates/vies-application-questions.html.twig
@@ -3,7 +3,7 @@
     <div class="panel-group">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 class="panel-title">Linifag spørgsmal</h4>
+          <h4 class="panel-title">Linjefag spørgsmal</h4>
         </div>
       </div>
       <div class="entity-list-advanced__body">
