--- a/docroot/themes/custom/site/templates/node/full/node--vih-course-period.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-course-period.html.twig
@@ -1,35 +1,76 @@
-{%
-  set classes = [
+{% set classes = [
     node.bundle|clean_class,
     node.isPromoted() ? 'is-promoted',
     node.isSticky() ? 'is-sticky',
     not node.isPublished() ? 'is-unpublished',
     view_mode ? view_mode|clean_class,
     'clearfix',
-  ]
-%}
+] %}
+
 <article{{ attributes.addClass(classes) }}>
-  <div class="container">
-  {{ title_prefix }}
-  {% if not page %}
-    <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-    </h2>
-  {% endif %}
-  {{ title_suffix }}
 
-  {% if display_submitted %}
-    <footer>
-      {{ author_picture }}
-      <div{{ author_attributes.addClass('author') }}>
-        {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
-        {{ metadata }}
-      </div>
-    </footer>
-  {% endif %}
+    <!-- Begin - content -->
+    <section class="sectioned sectioned--content">
+        <div class="sectioned__inner">
+            <div class="container">
 
-  <div{{ content_attributes.addClass('content') }}>
-    {{ content }}
-  </div>
-  </div>
+                <div class="boxy boxy--class-packages boxy--class-packages--list-advanced">
+                    <div class="boxy__body">
+
+                        <!-- Begin - panels -->
+                        <div class="panel-group" role="tablist">
+
+                            <div class="panel-group__heading">
+                                <h4 class="panel-group__heading__title">
+                                    {{ label }}
+                                </h4>
+                            </div>
+
+                            <div class="toggler">
+                                <!-- Begin - desktop tabs -->
+                                <div class="hidden-xs hidden-sm">
+                                    <ul class="nav nav-tabs nav-justified" role="tablist">
+                                        {% for slot in content['#course_slots'] %}
+                                            <li role="presentation" class="">
+                                                <a href="#" class="toggler__button"
+                                                   data-toggler="#period-slot-{{ slot.id }}"
+                                                   aria-controls="period-{{ node.id }}-slot-{{ slot.id }}"
+                                                   role="tab">{{ slot.name }}</a>
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                                <!-- End - desktop tabs -->
+
+                                <!-- Begin - responsive tabs -->
+                                <div class="visible-xs visible-sm">
+                                    <ul class="nav nav-pills nav-stacked">
+                                        {% for slot in content['#course_slots'] %}
+                                            <li role="presentation" class="">
+                                                <a href="#" class="toggler__button"
+                                                   data-toggler="#period-slot-{{ slot.id }}"
+                                                   aria-controls="period-{{ node.id }}-slot-{{ slot.id }}"
+                                                   role="tab">{{ slot.name }}</a>
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                                <!-- End - responsive tabs -->
+
+                                <!-- Begin - content -->
+                                {{ content.field_vih_cp_course_slots }}
+                                <!-- End - content -->
+
+                            </div>
+
+                        </div>
+                        <!-- End - panels -->
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- End - content -->
+
 </article>
