--- a/docroot/themes/custom/site/src/styles/theme/entity/node/list-advanced/_class.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/list-advanced/_class.scss
@@ -24,6 +24,11 @@
     cursor: hand;
     cursor: pointer;
   }
+  & a.link-cover{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
 }
 
 // --------------------------------------------------
