VI-451 Modals not shown all content on courses.

--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-teaser-modal.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-teaser-modal.html.twig
@@ -34,6 +34,9 @@
       {# Begin - body #}
       <div class="modal-body">
         {{ content.description }}
+        {# Begin - paragraphs #}
+        {{ content.field_vih_paragraphs }}
+        {# End - paragraphs #}
       </div>
       {# End - body #}
 
