VI-441 EU-cookie should follow the design of the site.

--- a/docroot/themes/custom/site/src/styles/theme/components/_button.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_button.scss
@@ -276,7 +276,12 @@ $button-danger-icon-background: lighten($btn-danger-bg, 14%);
     }
   }
 }
-
+.eu-cookie-compliance-default-button, .eu-cookie-withdraw-button{
+  font-family: unset;
+  text-shadow: unset;
+  @extend .btn;
+  @extend .btn-white;
+}
 .btn-white {
   @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
 }
