--- a/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
@@ -10,7 +10,7 @@
 // Variables
 // --------------------------------------------------
 
-$footer-background-color: $brand-primary;
+$footer-background-color: $footer-background-color;
 
 // Bottom
 $footer-bottom-background-color: #fff;
@@ -37,7 +37,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
   border-top: 0;
   margin: 0;
 
-  @include angled-edge('outside top', 'upper right', $brand-primary, $xs-sectioned-skewed-angle-height);
+  @include angled-edge('outside top', 'upper right', $footer-background-color, $xs-sectioned-skewed-angle-height);
   background-color: $footer-background-color;
 
   .block,
@@ -120,7 +120,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
 }
 
 .layout__footer-bottom-outer {
-  border-top: 1px solid lighten($brand-primary, 10%);
+  border-top: 1px solid lighten($footer-background-color, 10%);
 
   p {
     margin: 0;
@@ -187,7 +187,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
   .layout__footer {
     padding-top: $sm-footer-padding-top;
 
-    @include angled-edge('outside top', 'upper right', $brand-primary, $sm-sectioned-skewed-angle-height);
+    @include angled-edge('outside top', 'upper right', $footer-background-color, $sm-sectioned-skewed-angle-height);
   }
 
   .layout__footer-top-outer {
@@ -211,7 +211,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
   .layout__footer {
     padding-top: $md-footer-padding-top;
 
-    @include angled-edge('outside top', 'upper right', $brand-primary, $md-sectioned-skewed-angle-height);
+    @include angled-edge('outside top', 'upper right', $footer-background-color, $md-sectioned-skewed-angle-height);
   }
 
   .layout__footer-top-outer {
@@ -233,7 +233,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
 
   // Footer
   .layout__footer {
-    @include angled-edge('outside top', 'upper right', $brand-primary, $lg-sectioned-skewed-angle-height);
+    @include angled-edge('outside top', 'upper right', $footer-background-color, $lg-sectioned-skewed-angle-height);
   }
 }
 // Print
