--- a/docroot/themes/custom/site/src/styles/theme/entity/node/teaser/_teaser.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/teaser/_teaser.scss
@@ -109,6 +109,8 @@ $entity-teaser-inner-left-right-spacing: floor( ( $grid-gutter-width / 2 ) );
     color: inherit;
 
     word-break: break-all;
+    word-break: break-word;
+    hyphens: auto;
   }
 
   .heading-h1,
