--- a/docroot/themes/custom/site/src/styles/theme/components/sectioned/_modal.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/sectioned/_modal.scss
@@ -69,11 +69,9 @@
       }
     }
 
-    .sectioned--skewed-background-color {
-
-      .sectioned__inner {
-        background-color: transparent !important;
-      }
+    .sectioned__inner {
+      background-image: none !important;
+      background-color: transparent !important;
     }
   }
 }
