--- a/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
@@ -36,6 +36,9 @@ $modal-margin: 70px;
     overflow-x: auto;
     max-height: none !important;
   }
+  span.ajax-throbber{
+    display: none;
+  }
 }
 
 .modal-header {
@@ -161,6 +164,32 @@ $modal-margin: 70px;
   }
 }
 
+#drupal-modal{
+  & .modal-header{
+    min-height: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    content: '';
+    &::after{
+      display: none;
+      content: '';
+    }
+    & .modal-title{
+      display: none;
+    }
+    & .close{
+      z-index: 1;
+
+    }
+  }
+  & .sectioned--content{
+    &:after{
+      display: none;
+    }
+    margin-bottom: 0px;
+  }
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -170,13 +199,32 @@ $modal-margin: 70px;
 // --------------------------------------------------
 
 // Mobile - and up
-@media #{$breakpoint-mobile-and-up} {}
+@media #{$breakpoint-mobile-and-up} {
+  #drupal-modal{
+    & .modal-dialog{
+      width: auto;
+      & .modal-body{
+        & .banner{
+          margin-top: -20px;
+          margin-right: -15px;
+          margin-left: -15px;
+        }
+      }
+    }
+  }
+}
 
 // Mobile - only
 @media #{$breakpoint-mobile-only} {}
 
 // Tablet - and up
-@media #{$breakpoint-tablet-and-up} {}
+@media #{$breakpoint-tablet-and-up} {
+  #drupal-modal{
+    & .modal-dialog{
+      width: 600px;
+    }
+  }
+}
 
 // Tablet - only
 @media #{$breakpoint-tablet-only} {}
@@ -188,9 +236,16 @@ $modal-margin: 70px;
     padding: 20px 70px 70px 70px;
   }
 
-  .modal.terms-and-conditions{
+  #drupal-modal{
     & .modal-dialog{
-      width: 800px;
+      width: 1050px;
+      & .modal-body{
+        & .banner{
+          margin-top: -20px;
+          margin-right: -70px;
+          margin-left: -70px;
+        }
+      }
     }
   }
 }
