VI-441 Banner on node and term modals fix.

--- a/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
@@ -118,6 +118,11 @@ html {
   padding: 0 !important;
   margin-bottom: 220px;
 }
+.paragraph, .modal{
+  & span.ajax-throbber{
+    display: none;
+  }
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
