--- a/docroot/themes/custom/site/templates/taxonomy-term/modal-window/taxonomy-term--vih-class--modal-window.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/modal-window/taxonomy-term--vih-class--modal-window.html.twig
@@ -7,36 +7,24 @@ view_mode ? view_mode|clean_class,
 'clearfix',
 ] %}
 
-{% if node.field_vih_top_banner.value or user_displayed.field_vih_top_banner.value or term.field_vih_top_banner.value %}
-  {% if node.field_vih_top_banner.value or user_displayed.field_vih_top_banner.value or term.field_vih_top_banner.value %}
-
+  {% if term.field_vih_top_banner.value %}
     {# Begin - image #}
-    {% if node.field_vih_top_banner.value %}
-      {% set banner_background_image = node.field_vih_top_banner.entity.image.entity.fileuri | image_style('banner_small') %}
-    {% elseif user_displayed.field_vih_top_banner.value %}
-      {% set banner_background_image = user_displayed.field_vih_top_banner.entity.image.entity.fileuri | image_style('banner_small') %}
-    {% elseif term.field_vih_top_banner.value %}
       {% set banner_background_image = term.field_vih_top_banner.entity.image.entity.fileuri | image_style('banner_small') %}
-    {% endif %}
     {# End - image #}
-
     <div class="banner banner--small" style="background-image: url({{ banner_background_image }})">
       <div class="banner__inner">
         <div class="container">
           <div class="banner__heading">
-
             {% if term.field_vih_top_banner_text.value %}
               <h1 class="banner__heading__title">{{ term.field_vih_top_banner_text.value }}</h1>
             {% elseif name %}
               <h1 class="banner__heading__title">{{ name | raw }}</h1>
             {% endif %}
-
           </div>
         </div>
       </div>
     </div>
   {% endif %}
-{% endif %}
 {# End - banner #}
 
 <article{{ attributes.addClass(classes) }}>
