--- a/docroot/themes/custom/site/src/styles/theme/components/_breadcrumb.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_breadcrumb.scss
@@ -82,6 +82,10 @@ $breadcrumb-active-background-color: $brand-primary;
       text-transform: uppercase;
     }
   }
+
+  .path-frontpage & {
+    display: none;
+  }
 }
 
 // --------------------------------------------------
