--- a/docroot/themes/custom/site/src/styles/theme/components/_page-elements.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_page-elements.scss
@@ -264,3 +264,6 @@ $font-family-primary: 'Lato', sans-serif;
 .color-gray {
   color: #777;
 }
+.eu-cookie-withdraw-wrapper{
+  display: none !important;
+}
