--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
@@ -45,6 +45,14 @@
                                               {# End - name #}
 
                                           </a>
+                                        {% else %}
+                                            <div class="photo">
+
+                                                {# Begin - photo #}
+                                                {{ content.field_vih_photo }}
+                                                {# End - photo #}
+
+                                            </div>
                                         {% endif %}
                                     </div>
                                     <div class="col-xs-12 col-sm-8 col-md-9">
